Fixed size of images on mobile

--- a/components/sfhs/SFHS.module.css
+++ b/components/sfhs/SFHS.module.css
@@ -15,8 +15,12 @@
   max-width: 1000px;
 
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 50% 50%;
   align-items: center;
+}
+
+.grid > div {
+  width: 100%;
 }
 
 .header {
@@ -25,6 +29,11 @@
 
 .description {
   color: var(--text-color);
+}
+
+.logo {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 @media (max-width: 800px) {
